<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/createCustomerSuccessEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createCustomerSuccessNameText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="JaneDoe4920@gmail.com"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/createCustomerSuccessNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createCustomerSuccessText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Jane Doe"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/createCustomerSuccessText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="Customer Successfully Created:"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/createCustomerSuccessToActionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/createCustomerSuccessToMainButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="Back to Customer Actions"/>

    <Button
        android:id="@+id/createCustomerSuccessToMainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/createCustomerSuccessErrorText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="Back to Main"/>

    <TextView
        android:id="@+id/createCustomerSuccessErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:text="Error Message Area"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:id="@+id/createCustomerSuccessPrintCardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createCustomerSuccessEmailText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="Print Customer Card"/>

</RelativeLayout>